beginning translation process to catalan. I am just working on the trunk so I have left the 4.2 branch in 'maintain mode'. My goal is to end the work before new year so that 4.4 goes beta in catalan (the whole). This is because I have term exams after Chrismas holidays and time will not be much.
(Old svn revision: 19082)

--- a/po/ca.po
+++ b/po/ca.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: exo 0.3.1.1svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-11-22 17:40+0100\n"
-"PO-Revision-Date: 2005-11-15 07:36+0900\n"
+"PO-Revision-Date: 2005-12-09 16:53+0100\n"
 "Last-Translator: Pau Rul·lan Ferragut <paurullan@bulma.net>\n"
 "Language-Team: Catalan <ca@dodds.net>\n"
 "MIME-Version: 1.0\n"
@@ -334,30 +334,28 @@ msgid "Customize Toolbar..."
 msgstr "Personalitza barra d'eines..."
 
 #: exo/exo-wrap-table.c:169
-#, fuzzy
 msgid "Column spacing"
 msgstr "Espaiat entre columnes"
 
 #: exo/exo-wrap-table.c:170
 msgid "The amount of space between two consecutive columns"
-msgstr ""
+msgstr "L'espai deixat entre dues columnes consecutives"
 
 #: exo/exo-wrap-table.c:184
-#, fuzzy
 msgid "Row spacing"
-msgstr "Espaiat de files"
+msgstr "Espaiat entre files"
 
 #: exo/exo-wrap-table.c:185
 msgid "The amount of space between two consecutive rows"
-msgstr ""
+msgstr "L'espai deixat entre dues files consecutives"
 
 #: exo/exo-wrap-table.c:199
 msgid "Homogeneous"
-msgstr ""
+msgstr "Homogeni"
 
 #: exo/exo-wrap-table.c:200
 msgid "Whether the children should be all the same size"
-msgstr ""
+msgstr "Si tots els fills han de tenir el mateix tamany"
 
 #: exo/exo-xsession-client.c:152
 msgid "Window group"
