--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-12-30	Benedikt Meurer <benny@xfce.org>
+
+	* exo/exo-icon-view.c(exo_icon_view_start_rubberbanding): Be sure to
+	  disable a previous rubberband selection when starting a new rubberband
+	  selection.
+
 2005-12-17	Benedikt Meurer <benny@xfce.org>
 
 	* NEWS, README, configure.in.in: Add support for three different levels
