--- a/po/ca.po
+++ b/po/ca.po
@@ -1,16 +1,16 @@
 # Catalan translations for exo package.
 # Copyright (C) 2004-2005 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
-# Pau Rul·lan Ferragut <paurullan@bulma.net>, 2005.
+# Pau Rul·lan Ferragut <paurullan@bulma.net> 2005, 2006
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.1svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-11-22 17:40+0100\n"
-"PO-Revision-Date: 2005-12-09 16:53+0100\n"
+"PO-Revision-Date: 2006-01-08 21:54+0100\n"
 "Last-Translator: Pau Rul·lan Ferragut <paurullan@bulma.net>\n"
-"Language-Team: Catalan <ca@dodds.net>\n"
+"Language-Team: catalan\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
