--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-08  Pau Rullan Ferragut <paurullan@bulma.net>
+
+	* ca.po: little heading fixing
+
 2005-12-19  Pau Rullan Ferragut <paurullan@bulma.net>
 
 	* ca.po: beginning translation process to catalan. I am just
