2006-01-22	Benedikt Meurer <benny@xfce.org>
	* configure.in.in: Bump version to 0.3.1.2alpha.
	* configure.in.in: Bump current library interface version to 1, to make
	  sure certain Linux distributions don't run into trouble when including
	  exo pre-releases.
	* NEWS: Update some news items for the alpha release.
	* THANKS: Update translator credits.
	* po/*.po, po/libexo-0.3.pot: Update translations.




(Old svn revision: 19546)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2006-01-22	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in: Bump version to 0.3.1.2alpha.
+	* configure.in.in: Bump current library interface version to 1, to make
+	  sure certain Linux distributions don't run into trouble when including
+	  exo pre-releases.
+	* NEWS: Update some news items for the alpha release.
+	* THANKS: Update translator credits.
+	* po/*.po, po/libexo-0.3.pot: Update translations.
+
 2006-01-14	Benedikt Meurer <benny@xfce.org>
 
 	* exo/exo-icon-view.c: Draw keyfocus using the same semantics as
