--- a/THANKS
+++ b/THANKS
@@ -1,11 +1,42 @@
+What's this file about?
+-----------------------
+This file lists all external people that have contributed to this project and
+thereby helped to make libexo such a successful project.
+
+
+
+Testers (sorted by name):
+--------------------------
+These people have contributed to libexo by testing the software,
+reporting problems and making useful suggestions.
+
+
+
+Translators (sorted by language):
+----------------------------------
+These people have translated libexo to foreign languages.
+
+Pau Rul·lan Ferragut <paurullan@bulma.net>
+ * ca translations
+
+Stavros Giannouris <stavrosg2002@freemail.gr>
+ * el translations
+
 Dwayne Bailey <dwayne@translate.org.za>
  * en_GB translations
 
 Patricio Carr <pato@patocarr.com>
  * es translations
 
+Jari Rahkonen <jari.rahkonen@pp1.inet.fi>
+ * fi translations
+
 Stephane Roy <sroy@j2n.net>
  * fr translations
 
 Daichi Kawahata <daichik@users.sourceforge.net>
  * ja translations
+
+Joao Pedrosa <joaopedrosa@gmail.com>
+ * pt_BR translations
+
