--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-23	Benedikt Meurer <benny@xfce.org>
+
+	* configure.in.in: Bump version to 0.3.1.3svn.
+
 2006-01-22	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Bump version to 0.3.1.2alpha.
