* Updated. * Discarded obsolete translations.
(Old svn revision: 19645)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,13 @@
+2006-01-29  Daichi Kawahata <daichi@xfce.org>
+
+	* ca.po, de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po,
+	  pt_BR.po: Bumped version up.
+
+2006-01-22  Benedikt Meurer <benny@xfce.org>
+
+	* ca.po, de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po,
+	  libexo-0.3.pot, pt_BR.po: Update translations.
+
 2006-01-08  Pau Rullan Ferragut <paurullan@bulma.net>
 
 	* ca.po: little heading fixing
