--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,10 @@
-0.3.1.2alpha
-============
+0.3.1.3svn
+==========
+- Imported the "Xfce Preferred Applications" framework, which allows users to
+  select their preferred applications (i.e. web browser, mail reader, terminal
+  emulator) using a nice graphical interface, rather than having to figure out
+  where to add which environment variable to make Xfce use Firefox as default
+  web browser.
 - Updated the ExoIconView class to support an API compatible to the GtkIconView
   in Gtk+ 2.8, and improve the performance of the icon view.
 - Added a new utility exo-csource, which can generate C source code from
