Updated Finnish translations by Jari Rahkonen <jari.rahkonen@pp1.inet.fi>.
(Old svn revision: 19731)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,17 @@
+2006-02-03  Daichi Kawahata <daichi@xfce.org>
+
+	* fi.po: Updated Finnish translations by Jari Rahkonen
+	  <jari.rahkonen@pp1.inet.fi>.
+	* ca.po, de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po,
+	  libexo-0.3.pot, pt_BR.po: Updated.
+
+2006-01-31  Benedikt Meurer <benny@xfce.org>
+
+	* POTFILES.in: Add new files.
+	* libexo-0.3.pot, ca.po, de.po, el.po, en_GB.po, es.po, fi.po,
+	  fr.po, ja.po, pt_BR.po: Merge new strings.
+	* de.po: Update german translations.
+
 2006-01-29  Daichi Kawahata <daichi@xfce.org>
 
 	* ca.po, de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po,
