--- a/po/fi.po
+++ b/po/fi.po
@@ -1,14 +1,14 @@
 # Finnish translations for exo package.
 # Copyright (C) 2004-2005 os-cillation e.K.
 # This file is distributed under the same license as the exo package.
-# Jari Rahkonen <jari.rahkonen@pp1.inet.fi>, 2005.
+# Jari Rahkonen <jari.rahkonen@pp1.inet.fi>, 2005-2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: exo 0.3.1.3svn\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2006-02-03 20:22+0900\n"
-"PO-Revision-Date: 2005-10-10 01:46+0900\n"
+"PO-Revision-Date: 2006-02-02 22:09+0200\n"
 "Last-Translator: Jari Rahkonen <jari.rahkonen@pp1.inet.fi>\n"
 "Language-Team: os-cillation <info@os-cillation.com>\n"
 "MIME-Version: 1.0\n"
@@ -110,35 +110,35 @@ msgstr "Osoitinkohteen tekstin väri"
 
 #: ../exo/exo-icon-view.c:547
 msgid "Column Spacing"
-msgstr ""
+msgstr "Sarakkeiden välit"
 
 #: ../exo/exo-icon-view.c:548
 msgid "Space which is inserted between grid column"
-msgstr ""
+msgstr "Ruudukon sarakkeiden välinen tyhjä tila"
 
 #: ../exo/exo-icon-view.c:564
 msgid "Number of columns"
-msgstr ""
+msgstr "Sarakkeiden määrä"
 
 #: ../exo/exo-icon-view.c:565
 msgid "Number of columns to display"
-msgstr ""
+msgstr "Näytettävien sarakkeiden määrä"
 
 #: ../exo/exo-icon-view.c:582
 msgid "Width for each item"
-msgstr ""
+msgstr "Kohteiden leveys"
 
 #: ../exo/exo-icon-view.c:583
 msgid "The width used for each item"
-msgstr ""
+msgstr "Ruudukon kohteiden leveys"
 
 #: ../exo/exo-icon-view.c:598
 msgid "Margin"
-msgstr ""
+msgstr "Marginaali"
 
 #: ../exo/exo-icon-view.c:599
 msgid "Space which is inserted at the edges of the icon view"
-msgstr ""
+msgstr "Kuvakenäkymän reunoille lisättävä tyhjä tila"
 
 #: ../exo/exo-icon-view.c:615
 msgid "Markup column"
@@ -163,19 +163,19 @@ msgstr "Kuinka kohteiden teksti ja kuvake sijoitetaan suhteessa toisiinsa"
 
 #: ../exo/exo-icon-view.c:677
 msgid "Reorderable"
-msgstr ""
+msgstr "Uudelleen järjestettävä"
 
 #: ../exo/exo-icon-view.c:678
 msgid "View is reorderable"
-msgstr ""
+msgstr "Näkymän voi järjestää uudelleen"
 
 #: ../exo/exo-icon-view.c:693
 msgid "Row Spacing"
-msgstr ""
+msgstr "Rivivälit"
 
 #: ../exo/exo-icon-view.c:694
 msgid "Space which is inserted between grid rows"
-msgstr ""
+msgstr "Ruudukon rivien välinen tyhjä tila"
 
 #: ../exo/exo-icon-view.c:708
 msgid "Selection mode"
@@ -187,11 +187,11 @@ msgstr "Valintatapa"
 
 #: ../exo/exo-icon-view.c:725
 msgid "Spacing"
-msgstr ""
+msgstr "Välit"
 
 #: ../exo/exo-icon-view.c:726
 msgid "Space which is inserted between cells of an item"
-msgstr ""
+msgstr "Kohteen lohkojen välinen tyhjä tila"
 
 #: ../exo/exo-icon-view.c:753
 msgid "Selection Box Color"
@@ -259,41 +259,41 @@ msgstr "Mukauta välinepalkkia..."
 #: ../exo/exo-url.c:244
 #, c-format
 msgid "Unable to open `%s'"
-msgstr ""
+msgstr "Kohdetta \"%s\" ei voi avata"
 
 #: ../exo/exo-url.c:257
 #, c-format
 msgid "The URL `%s' is not supported"
-msgstr ""
+msgstr "\"%s\" ei ole tuettu URL-tyyppi"
 
 #: ../exo/exo-url.c:324
 #, c-format
 msgid "Failed to open `%s'."
-msgstr ""
+msgstr "Kohteen \"%s\" avaaminen epäonnistui."
 
 #: ../exo/exo-wrap-table.c:169
 msgid "Column spacing"
-msgstr ""
+msgstr "Sarakkeiden väli"
 
 #: ../exo/exo-wrap-table.c:170
 msgid "The amount of space between two consecutive columns"
-msgstr ""
+msgstr "Vierekkäisten sarakkeiden välinen tyhjä tila"
 
 #: ../exo/exo-wrap-table.c:184
 msgid "Row spacing"
-msgstr ""
+msgstr "Riviväli"
 
 #: ../exo/exo-wrap-table.c:185
 msgid "The amount of space between two consecutive rows"
-msgstr ""
+msgstr "Peräkkäisten rivien välinen tyhjä tila"
 
 #: ../exo/exo-wrap-table.c:199
 msgid "Homogeneous"
-msgstr ""
+msgstr "Tasamittainen"
 
 #: ../exo/exo-wrap-table.c:200
 msgid "Whether the children should be all the same size"
-msgstr ""
+msgstr "Ovatko kaikki lapsielementit samankokoisia"
 
 #: ../exo/exo-xsession-client.c:152
 msgid "Window group"
@@ -383,247 +383,263 @@ msgstr "Ilmoitathan ohjelmistovirheet osoitteeseen <%s>.\n"
 #: ../exo-helper/exo-helper-chooser-dialog.c:121
 #: ../exo-helper/exo-preferred-applications-settings.c:62
 msgid "Preferred Applications"
-msgstr ""
+msgstr "Oletussovellukset"
 
 #.
 #. Internet
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:140
 msgid "Internet"
-msgstr ""
+msgstr "Internet"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:153
 msgid "Default Web Browser"
-msgstr ""
+msgstr "WWW-selain"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:161
 msgid ""
 "The preferred Web Browser will be used to open\n"
 "hyperlinks and display help contents."
 msgstr ""
+"Oletusarvoista WWW-selainta käytetään hyperlinkkien\n"
+"avaamiseen ja ohjeiden näyttämiseen."
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:185
 msgid "Default Mail Reader"
-msgstr ""
+msgstr "Sähkopostiohjelma"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:193
 msgid ""
 "The preferred Mail Reader will be used to compose\n"
 "emails when you click on email addresses."
 msgstr ""
+"Oletusarvoista sähköpostiohjelmaa käytetään sähköpostin\n"
+"kirjoittamiseen osoitetta napsautettuasi."
 
 #.
 #. Utilities
 #.
 #: ../exo-helper/exo-helper-chooser-dialog.c:213
 msgid "Utilities"
-msgstr ""
+msgstr "Apuohjelmat"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:226
 msgid "Default Terminal Emulator"
-msgstr ""
+msgstr "Pääteohjelma"
 
 #: ../exo-helper/exo-helper-chooser-dialog.c:234
 msgid ""
 "The preferred Terminal Emulator will be used to\n"
 "run commands that require a CLI environment."
 msgstr ""
+"Oletusarvoista pääteohjelmaa käytetään komentorivi-\n"
+"sovellusten suorittamiseen."
 
 #: ../exo-helper/exo-helper-chooser.c:177
 #: ../exo-helper/exo-helper-chooser.c:184
 msgid "Press left mouse button to change the selected application."
-msgstr ""
+msgstr "Paina hiiren vasenta painiketta vaihtaaksesi sovelluksen."
 
 #: ../exo-helper/exo-helper-chooser.c:183
 msgid "Application Chooser Button"
-msgstr ""
+msgstr "Sovellusvalitsinpainike"
 
 #: ../exo-helper/exo-helper-chooser.c:319
 msgid "No application selected"
-msgstr ""
+msgstr "Ei sovellusta valittuna"
 
 #: ../exo-helper/exo-helper-chooser.c:335
 msgid "Failed to set default Web Browser"
-msgstr ""
+msgstr "Oletusarvoisen WWW-selaimen asettaminen epäonnistui"
 
 #: ../exo-helper/exo-helper-chooser.c:336
 msgid "Failed to set default Mail Reader"
-msgstr ""
+msgstr "Oletusarvoisen sähköpostiohjelman asettaminen epäonnistui"
 
 #: ../exo-helper/exo-helper-chooser.c:337
 msgid "Failed to set default Terminal Emulator"
-msgstr ""
+msgstr "Oletusarvoisen päätesovelluksen asettaminen epäonnistui"
 
 #: ../exo-helper/exo-helper-chooser.c:401
 msgid "Select application"
-msgstr ""
+msgstr "Valitse sovellus"
 
 #: ../exo-helper/exo-helper-chooser.c:439
 msgid "Choose a custom Web Browser"
-msgstr ""
+msgstr "Valitse mukautettu WWW-selain"
 
 #: ../exo-helper/exo-helper-chooser.c:440
 msgid "Choose a custom Mail Reader"
-msgstr ""
+msgstr "Valitse mukautettu sähköpostiohjelma"
 
 #: ../exo-helper/exo-helper-chooser.c:441
 msgid "Choose a custom Terminal Emulator"
-msgstr ""
+msgstr "Valitse mukautettu pääteohjelma"
 
 #: ../exo-helper/exo-helper-chooser.c:446
 msgid ""
 "Specify the application you want to use\n"
 "as default Web Browser for Xfce:"
 msgstr ""
+"Määritä sovellus, jota käytetään Xfce:n\n"
+"oletusarvoisena WWW-selaimena:"
 
 #: ../exo-helper/exo-helper-chooser.c:447
 msgid ""
 "Specify the application you want to use\n"
 "as default Mail Reader for Xfce:"
 msgstr ""
+"Määritä sovellus, jota käytetään Xfce:n\n"
+"oletusarvoisena sähköpostiohjelmana:"
 
 #: ../exo-helper/exo-helper-chooser.c:448
 msgid ""
 "Specify the application you want to use\n"
 "as default Terminal Emulator for Xfce:"
 msgstr ""
+"Määritä sovellus, jota käytetään Xfce:n\n"
+"oletusarvoisena päätesovelluksena:"
 
 #: ../exo-helper/exo-helper-chooser.c:512
 msgid "Browse the file system to choose a custom command."
-msgstr ""
+msgstr "Selaa tiedostojärjestelmää valitaksesi mukautetun komennon."
 
 #: ../exo-helper/exo-helper-chooser.c:687
 msgid "_Other..."
-msgstr ""
+msgstr "_Muu..."
 
 #: ../exo-helper/exo-helper-chooser.c:688
 msgid "Use a custom application which is not included in the above list."
-msgstr ""
+msgstr "Valitse mukautettu sovellus, jota ei löyty yläpuoliselta listalta."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:142
 msgid "Choose Preferred Application"
-msgstr ""
+msgstr "Valitse oletussovellus"
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:285
 msgid ""
 "Please choose your preferred Web\n"
 "Browser now and click OK to proceed."
 msgstr ""
+"Valitse haluamasi WWW-selain ja\n"
+"napsauta OK jatkaaksesi."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:287
 msgid ""
 "Please choose your preferred Mail Reader\n"
 "now and click OK to proceed."
 msgstr ""
+"Valitse haluamasi sähköpostiohjelma ja\n"
+"napsauta OK jatkaaksesi."
 
 #: ../exo-helper/exo-helper-launcher-dialog.c:289
 msgid ""
 "Please choose your preferred Terminal\n"
 "Emulator now and click OK to proceed."
 msgstr ""
+"Valitse haluamasi pääteohjelma ja\n"
+"napsauta OK jatkaaksesi."
 
 #: ../exo-helper/exo-helper.c:383
 msgid "No command specified"
-msgstr ""
+msgstr "Ei komentoa määritetty"
 
 #: ../exo-helper/exo-helper.c:675
 msgid "Failed to open helpers.rc for writing"
-msgstr ""
+msgstr "Tiedoston helpers.rc avaaminen kirjoitettavaksi epäonnistui"
 
 #: ../exo-helper/exo-preferred-applications-settings.c:40
 msgid "Failed to launch exo-preferred-applications"
-msgstr ""
+msgstr "Komennon exo-preferred-applications suorittaminen epäonnistui"
 
 #: ../exo-helper/helpers/Terminal.desktop.in.h:1
 msgid "Xfce Terminal"
-msgstr ""
+msgstr "Xfce pääte"
 
 #: ../exo-helper/helpers/balsa.desktop.in.h:1
 msgid "Balsa"
-msgstr ""
+msgstr "Balsa"
 
 #: ../exo-helper/helpers/debian-sensible-browser.desktop.in.h:1
 msgid "Debian Sensible Browser"
-msgstr ""
+msgstr "Debianin sensible-browser"
 
 #: ../exo-helper/helpers/debian-x-terminal-emulator.desktop.in.h:1
 msgid "Debian X Terminal Emulator"
-msgstr ""
+msgstr "Debianin X-pääteohjelma"
 
 #: ../exo-helper/helpers/epiphany.desktop.in.h:1
 msgid "Epiphany Web Browser"
-msgstr ""
+msgstr "Epiphany WWW-selain"
 
 #: ../exo-helper/helpers/eterm.desktop.in.h:1
 msgid "Enlightened Terminal Emulator"
-msgstr ""
+msgstr "ETerm-pääteohjelma"
 
 #: ../exo-helper/helpers/evolution.desktop.in.h:1
 msgid "Novell Evolution"
-msgstr ""
+msgstr "Novell Evolution"
 
 #: ../exo-helper/helpers/firefox.desktop.in.h:1
 msgid "Mozilla Firefox"
-msgstr ""
+msgstr "Mozilla Firefox"
 
 #: ../exo-helper/helpers/galeon.desktop.in.h:1
 msgid "Galeon Web Browser"
-msgstr ""
+msgstr "Galeon WWW-selain"
 
 #: ../exo-helper/helpers/gnome-terminal.desktop.in.h:1
 msgid "GNOME Terminal"
-msgstr ""
+msgstr "Gnomen pääte"
 
 #: ../exo-helper/helpers/kmail.desktop.in.h:1
 msgid "KMail"
-msgstr ""
+msgstr "KMail"
 
 #: ../exo-helper/helpers/konqueror.desktop.in.h:1
 msgid "Konqueror Web Browser"
-msgstr ""
+msgstr "Konqueror WWW-selain"
 
 #: ../exo-helper/helpers/mozilla-browser.desktop.in.h:1
 msgid "Mozilla Browser"
-msgstr ""
+msgstr "Mozilla-selain"
 
 #: ../exo-helper/helpers/mozilla-mailer.desktop.in.h:1
 msgid "Mozilla Mail"
-msgstr ""
+msgstr "Mozilla sähköposti"
 
 #: ../exo-helper/helpers/opera-browser.desktop.in.h:1
 msgid "Opera Browser"
-msgstr ""
+msgstr "Opera-selain"
 
 #: ../exo-helper/helpers/opera-mailer.desktop.in.h:1
 msgid "Opera Mail"
-msgstr ""
+msgstr "Opera sähköposti"
 
 #: ../exo-helper/helpers/thunderbird.desktop.in.h:1
 msgid "Mozilla Thunderbird"
-msgstr ""
+msgstr "Mozilla Thunderbird"
 
 #: ../exo-helper/helpers/xterm.desktop.in.h:1
 msgid "X Terminal"
-msgstr ""
+msgstr "X-pääte"
 
 #: ../exo-open/main.c:43
 msgid "Usage: exo-open [URLs...]"
-msgstr ""
+msgstr "Käyttö: exo-open [URL:t...]"
 
 #: ../exo-open/main.c:44
 msgid "       exo-open --launch TYPE [PARAMETERs...]"
-msgstr ""
+msgstr "        exo-open --launch TYYPPI [PARAMETRIT...]"
 
 #: ../exo-open/main.c:46
-#, fuzzy
 msgid "  -h, --help                          Print this help message and exit"
-msgstr "  -h, --help        Näytä tämä ohjeteksti ja poistu\n"
+msgstr "  -h, --help                          Näytä tämä ohjeteksti ja poistu"
 
 #: ../exo-open/main.c:47
-#, fuzzy
 msgid ""
 "  -v, --version                       Print version information and exit"
-msgstr "  -v, --version     Näytä versiotiedot ja poistu\n"
+msgstr "  -v, --version                       Näytä versiotiedot ja poistu"
 
 #: ../exo-open/main.c:49
 msgid ""
@@ -632,10 +648,13 @@ msgid ""
 "where\n"
 "                                      TYPE is one of the following values."
 msgstr ""
+"  --launch TYYPPI [PARAMETRIT...]     Suorita TYYPIN oletussovellus\n"
+"                                      käyttäen valinnaisia PARAMETREJA,\n"
+"                                      kun TYYPPI on joku alla luetelluista."
 
 #: ../exo-open/main.c:53
 msgid "The following TYPEs are supported for the --launch command:"
-msgstr ""
+msgstr "Komento --launch tukee seuraavia TYYPPEJÄ:"
 
 #. Note to Translators: Do not translate the TYPEs (WebBrowser, MailReader, TerminalEmulator),
 #. * since the exo-helper utility will not accept localized TYPEs.
@@ -646,6 +665,9 @@ msgid ""
 "  MailReader       - The preferred Mail Reader.\n"
 "  TerminalEmulator - The preferred Terminal Emulator."
 msgstr ""
+"  WebBrowser       - Oletusarvoinen WWW-selain.\n"
+"  MailReader       - Oletusarvoinen sähköpostiohjelma.\n"
+"  TerminalEmulator - Oletusarvoinen pääteohjelma."
 
 #: ../exo-open/main.c:63
 msgid ""
@@ -655,9 +677,12 @@ msgid ""
 "pass additional parameters to the application (i.e. for TerminalEmulator\n"
 "you can pass the command line that should be run in the terminal)."
 msgstr ""
+"Jos et määritä --launch -valitsinta, exo-open avaa kaikki valitut URL:t\n"
+"niiden oletuskäsittelijöillä. Muussa tapauksessa voit valita suoritettavan\n"
+"sovelluksen ja antaa sille lisäparametreja (voit esimerkiksi määrittää\n"
+"päätteessä suoritettavan komentorivin)."
 
 #: ../exo-open/main.c:100
-#, fuzzy
 msgid ""
 "Copyright (c) 2005-2006\n"
 "        os-cillation e.K. All rights reserved.\n"
@@ -665,8 +690,8 @@ msgid ""
 "Written by Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
 msgstr ""
-"Copyright (c) 2005\n"
-"  os-cillation e.K. Kaikki oikeudet pidätetään.\n"
+"Copyright (c) 2005-2006\n"
+"        os-cillation e.K. Kaikki oikeudet pidätetään.\n"
 "\n"
 "Kirjoittanut Benedikt Meurer <benny@xfce.org>.\n"
 "\n"
@@ -674,9 +699,9 @@ msgstr ""
 #: ../exo-open/main.c:121
 #, c-format
 msgid "Failed to launch preferred application for category `%s'."
-msgstr ""
+msgstr "Oletussovelluksen suorittaminen kategorialle \"%s\" epäonnistui."
 
 #: ../exo-open/main.c:144
 #, c-format
 msgid "Failed to open URL `%s'."
-msgstr ""
+msgstr "URL:n \"%s\" avaaminen epäonnistui."
