Updated copyright information.
(Old svn revision: 19739)

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,7 @@
 2006-02-04  Daichi Kawahata <daichi@xfce.org>
 
+	* ca.po, de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po,
+	  pt_BR.po: Updated copyright information.
 	* ja.po: Updated Japanese translations.
 
 2006-02-03  Daichi Kawahata <daichi@xfce.org>
