--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-02-11  Daichi Kawahata <daichi@xfce.org>
+
+	* ca.po, de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po,
+	  pt_BR.po: Updated.
+
 2006-02-04  Daichi Kawahata <daichi@xfce.org>
 
 	* ca.po, de.po, el.po, en_GB.po, es.po, fi.po, fr.po, ja.po,
